# law-buddy

./: app.py  llm.py  lookup.py  main.py  pyproject.toml  run_app.py
